--- a/gamabeting-front/package.json
+++ b/gamabeting-front/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
+    "moment": "^2.23.0",
     "node-sass-chokidar": "^1.3.4",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
@@ -17,7 +23,6 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -28,5 +33,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "npm-run-all": "^4.1.3"
+  }
 }
