--- a/gamabeting-front/package.json
+++ b/gamabeting-front/package.json
@@ -11,7 +11,10 @@
     "moment": "^2.23.0",
     "node-sass-chokidar": "^1.3.4",
     "react": "^16.6.1",
+    "react-currency-format": "^1.0.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.6.1",
+    "react-numeric-input": "^2.2.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
